force-app/main/default/objects/Fatura__c/Fatura__c.object-meta.xml
<CustomObject>
    <label>Fatura</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Fatura Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Faturalar</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>