force-app/main/default/objects/Fatura__c/fields/Fatura_Numarasi__c.field-meta.xml
<CustomField>
    <fullName>Fatura_Numarasi__c</fullName>
    <label>Fatura Numarasi</label>
    <type>AutoNumber</type>
</CustomField>