force-app/main/default/objects/Fatura__c/fields/Fatura_Tarihi__c.field-meta.xml
<CustomField>
    <fullName>Fatura_Tarihi__c</fullName>
    <label>Fatura Tarihi</label>
    <type>Date</type>
</CustomField>