force-app/main/default/objects/Fatura__c/fields/Fatura_Toplam__c.field-meta.xml
<CustomField>
    <fullName>Fatura_Toplam__c</fullName>
    <label>Fatura Toplam</label>
    <summarizedField>Fatura_Icerik__c.Tutar__c</summarizedField>
    <summaryForeignKey>Fatura_Icerik__c.Fatura__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>